--- a/CharityProject/StoryBoards/Custom.storyboard
+++ b/CharityProject/StoryBoards/Custom.storyboard
@@ -10,7 +10,7 @@
         <!--Cinemato-->
         <scene sceneID="YaO-qb-tiR">
             <objects>
-                <viewController id="lEL-BP-wLf" customClass="HomeController" customModule="Cinemtiyo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="lEL-BP-wLf" customClass="PopularMoviesController" customModule="Cinemtiyo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="667-K2-Bc4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -81,7 +81,7 @@
                                 </constraints>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="81Y-lg-ZN0">
-                                <rect key="frame" x="5" y="383" width="404" height="479"/>
+                                <rect key="frame" x="5" y="501" width="404" height="361"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3EK-PE-JQU">
                                     <size key="itemSize" width="50" height="50"/>
@@ -91,48 +91,45 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="PAm-66-I4t">
-                                <rect key="frame" x="5" y="160" width="404" height="66"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="155" translatesAutoresizingMaskIntoConstraints="NO" id="VmV-Qn-lI9">
+                                <rect key="frame" x="5" y="160" width="404" height="54"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Avangers" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e1p-sk-Z2y">
-                                        <rect key="frame" x="124" y="0.0" width="156.5" height="41"/>
-                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="34"/>
-                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wH-a3-qtS">
-                                        <rect key="frame" x="160" y="42" width="84.5" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="PAm-66-I4t">
+                                        <rect key="frame" x="0.0" y="0.0" width="124.5" height="54"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Avangers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e1p-sk-Z2y">
+                                                <rect key="frame" x="0.0" y="0.0" width="111.5" height="29"/>
+                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
+                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wH-a3-qtS">
+                                                <rect key="frame" x="0.0" y="30" width="84.5" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019-18-06" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2xP-yd-Abw">
+                                        <rect key="frame" x="279.5" y="17" width="124.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rcm-XT-n6v">
-                                <rect key="frame" x="5" y="236" width="404" height="140"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="140" id="jFR-1r-jZT"/>
-                                </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Rcm-XT-n6v" firstAttribute="top" secondItem="PAm-66-I4t" secondAttribute="bottom" constant="10" id="1eJ-E6-RGk"/>
-                            <constraint firstItem="auD-HJ-NBT" firstAttribute="trailing" secondItem="Rcm-XT-n6v" secondAttribute="trailing" constant="5" id="30x-Om-x8r"/>
+                            <constraint firstItem="VmV-Qn-lI9" firstAttribute="top" secondItem="han-MX-Bfj" secondAttribute="bottom" constant="10" id="016-rP-55G"/>
                             <constraint firstItem="81Y-lg-ZN0" firstAttribute="bottom" secondItem="auD-HJ-NBT" secondAttribute="bottom" id="EI3-Ot-5WY"/>
-                            <constraint firstItem="PAm-66-I4t" firstAttribute="top" secondItem="han-MX-Bfj" secondAttribute="bottom" constant="10" id="ERv-p4-K8o"/>
-                            <constraint firstItem="PAm-66-I4t" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" constant="5" id="JsE-RV-L2j"/>
-                            <constraint firstItem="Rcm-XT-n6v" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" constant="5" id="S1k-qd-UwV"/>
+                            <constraint firstAttribute="trailing" secondItem="VmV-Qn-lI9" secondAttribute="trailing" constant="5" id="K8E-UE-xZM"/>
                             <constraint firstItem="han-MX-Bfj" firstAttribute="top" secondItem="RdL-Gj-nBw" secondAttribute="top" id="V6J-YL-td7"/>
                             <constraint firstAttribute="trailing" secondItem="han-MX-Bfj" secondAttribute="trailing" id="Whx-gW-25A"/>
-                            <constraint firstItem="auD-HJ-NBT" firstAttribute="trailing" secondItem="PAm-66-I4t" secondAttribute="trailing" constant="5" id="a24-ci-c6Z"/>
-                            <constraint firstItem="81Y-lg-ZN0" firstAttribute="top" secondItem="Rcm-XT-n6v" secondAttribute="bottom" constant="7" id="aUk-sJ-yeF"/>
+                            <constraint firstItem="VmV-Qn-lI9" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" constant="5" id="bLr-Ul-for"/>
                             <constraint firstItem="81Y-lg-ZN0" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" constant="5" id="eyc-dA-2tl"/>
+                            <constraint firstItem="81Y-lg-ZN0" firstAttribute="height" secondItem="auD-HJ-NBT" secondAttribute="height" multiplier="1:2" id="mm4-8R-elb"/>
                             <constraint firstItem="han-MX-Bfj" firstAttribute="leading" secondItem="auD-HJ-NBT" secondAttribute="leading" id="tN8-fk-nXm"/>
                             <constraint firstItem="auD-HJ-NBT" firstAttribute="trailing" secondItem="81Y-lg-ZN0" secondAttribute="trailing" constant="5" id="wOE-3u-SUA"/>
                         </constraints>
@@ -142,7 +139,6 @@
                     <connections>
                         <outlet property="attributesCollectionView" destination="81Y-lg-ZN0" id="Mio-sA-SRf"/>
                         <outlet property="movieCoverPoster" destination="han-MX-Bfj" id="g2y-pT-RAv"/>
-                        <outlet property="movieDescriptionTextView" destination="Rcm-XT-n6v" id="4CO-bg-UPJ"/>
                         <outlet property="movieTitleLabel" destination="e1p-sk-Z2y" id="ePl-V5-IzT"/>
                     </connections>
                 </viewController>
