--- a/Cinemtiyo/View/SliderSignupCellCollectionViewCell.xib
+++ b/Cinemtiyo/View/SliderSignupCellCollectionViewCell.xib
@@ -17,34 +17,17 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="4xO-Y0-c3P">
-                        <rect key="frame" x="20" y="39.5" width="758" height="424"/>
+                        <rect key="frame" x="20" y="39" width="758" height="425"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleAspectFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="dCr-gk-llO">
-                                <rect key="frame" x="0.0" y="0.0" width="758" height="29"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebZ-5x-Gf2">
-                                        <rect key="frame" x="0.0" y="0.0" width="694.5" height="29"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="inemato" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YeM-5q-WTb">
-                                        <rect key="frame" x="696.5" y="0.0" width="61.5" height="29"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7s5-75-vwm">
-                                <rect key="frame" x="0.0" y="39" width="758" height="180"/>
+                                <rect key="frame" x="0.0" y="0.0" width="758" height="180"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="180" id="Ey7-rF-lWs"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3qR-7m-uax">
-                                <rect key="frame" x="0.0" y="229" width="758" height="40"/>
+                                <rect key="frame" x="0.0" y="190" width="758" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="QjW-Rk-DBo"/>
                                 </constraints>
@@ -52,7 +35,7 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fVR-G6-De8">
-                                <rect key="frame" x="0.0" y="279" width="758" height="40"/>
+                                <rect key="frame" x="0.0" y="240" width="758" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="wMT-pg-1cP"/>
                                 </constraints>
@@ -60,7 +43,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5jY-DZ-YuT">
-                                <rect key="frame" x="0.0" y="329" width="758" height="40"/>
+                                <rect key="frame" x="0.0" y="290" width="758" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="uAS-GP-xHY"/>
                                 </constraints>
@@ -68,14 +51,24 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ipz-Ki-B4t">
-                                <rect key="frame" x="0.0" y="379" width="758" height="45"/>
+                                <rect key="frame" x="0.0" y="340" width="758" height="45"/>
                                 <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="fjX-aT-dzn"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <state key="normal" title="SignUp">
+                                <state key="normal" title="Create an Account">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="signupBtnPressed:" destination="q7i-3C-EaH" eventType="touchUpInside" id="5bh-mj-R3k"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zm3-FZ-CML">
+                                <rect key="frame" x="0.0" y="395" width="758" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Already have an account ">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
                         </subviews>
